--- a/package.json
+++ b/package.json
@@ -5,12 +5,15 @@
   "main": "script.js",
   "scripts": {
     "test": "jest"
-    
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "jest": "^29.7.0"
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0"
+  },
+  "jest": {
+    "testEnvironment": "jsdom"
   }
 }
