--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "cypress": "^14.2.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0"
   },
